# mlat-server-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh
src/: clocktrack.rs  config.rs  constants.rs  coordinator.rs  geodesy.rs  lib.rs  main.rs  mlattrack.rs  output.rs  receiver.rs  solver.rs  tracker.rs
src/kalman/: mod.rs  state.rs  unscented.rs
src/modes/: altitude.rs  cpr.rs  crc.rs  message.rs  mod.rs  squawk.rs
src/net/: connection.rs  json_client.rs  listener.rs  listener.rs.bak  listener.rs.bak2  messages.rs  mod.rs  output_tcp.rs  udp.rs
